--- a/pazarama/assets/scss/style.scss
+++ b/pazarama/assets/scss/style.scss
@@ -128,7 +128,8 @@ body {
               
             }
             a{
-              padding: 10px 20px;
+              padding: 12px 20px;
+              margin-bottom:10px;
               background-color: #2f5a80;
               font-size: 17px;
                 color: #fff;
