--- a/pazarama/assets/scss/style.css
+++ b/pazarama/assets/scss/style.css
@@ -499,6 +499,7 @@ body {
 }
 @media screen and (max-width: 750px) {
   .cupe-content .cupe-text {
+    text-align: center;
     margin-top: 100px;
     font-size: 17px;
   }
@@ -536,6 +537,7 @@ body {
 }
 @media screen and (max-width: 750px) {
   .percent-content .percent-text {
+    text-align: center;
     margin-top: 100px;
     font-size: 17px;
   }
