--- a/pazarama/assets/scss/style.scss
+++ b/pazarama/assets/scss/style.scss
@@ -544,7 +544,9 @@ height: 50px;
       .cupe-text{
         font-size: 25px;
         margin-top:170px;
+       
         @media screen and(max-width:750px){
+          text-align: center;
           margin-top:100px;
         font-size: 17px;
         }
@@ -576,7 +578,9 @@ height: 50px;
         .percent-text{
           font-size: 25px;
           margin-top:170px;
+          
           @media screen and(max-width:750px){
+            text-align: center;
             margin-top:100px;
           font-size: 17px;
           }
